--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -19,6 +19,9 @@ en:
         confirm_delete_entry_title: "Remove this entry forever"
       form:
         title: Title
+        pause_time: 'Time to pause on each slide (milliseconds)'
+        anim_speed: 'Transition length (milliseconds)'
+        effect: 'Transitions to use'
         images: Images
         add: Add
         add_another_image: "Add Another Image"
