--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -21,6 +21,9 @@ en:
         title: Title
         pause_time: 'Time to pause on each slide (milliseconds)'
         anim_speed: 'Transition length (milliseconds)'
+        slide_order: 'Slide order'
+        sequential: 'Sequential'
+        random: 'Random'
         effect: 'Transitions to use'
         images: Images
         add: Add
