--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,17 +1,17 @@
 en:
   plugins:
     portfolio:
-      title: Portfolio
-      description: Manage a portfolio within Refinery CMS
+      title: Slideshows
+      description: Manage slideshows within Refinery CMS
   admin:
     portfolio:
       index:
         actions: Actions
-        create_new_portfolio_entry: "Add New Portfolio Entry"
-        reorder_portfolio: "Reorder Portfolio"
-        reorder_portfolio_done: "Done Reordering Portfolio"
+        create_new_portfolio_entry: "Add New Slideshow Entry"
+        reorder_portfolio: "Reorder Slideshows"
+        reorder_portfolio_done: "Done Reordering Slideshows"
         portfolio: Portfolio
-        no_portfolio_entries_yet: 'There are no portfolio entries yet. Click "Add New Portfolio Entry" to add your first portfolio entries.'
+        no_portfolio_entries_yet: 'There are no slideshow entries yet. Click "Add New Slideshow Entry" to add your first slideshow entries.'
       list:
         view_live_html: "View this entry live <br/><em>(opens in a new window)</em>"
         edit_this_entry: "Edit this entry"
